# enpm818Z-fall-2025

./: .gitignore  README.md
docs/_build/html/: .buildinfo  .buildinfo.bak  assignments.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: assignments.doctree  environment.pickle  index.doctree
docs/_build/html/.doctrees/assignments/: rwaII.doctree
docs/_build/html/_sources/: assignments.rst.txt
docs/_build/html/assignments/: rwaII.html
docs/source/: assignments.rst  conf.py  index.rst  lectures.rst
docs/source/assignments/: rwaII.rst
docs/source/lectures/: lecture3.rst  lecture4.rst  lecture5.rst  lecture6.rst  lecture7.rst
rwa2_starter/data/: README.txt
rwa2_starter/slam_frontend/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
rwa2_starter/slam_frontend/config/: params.yaml
rwa2_starter/slam_frontend/launch/: rwa2_dev.launch.py  rwa2_full.launch.py
rwa2_starter/slam_frontend/rviz/: rwa2.rviz
rwa2_starter/slam_frontend/slam_frontend/: __init__.py  diagnostic_node.py  icp_utils.py  local_map_manager_node.py  odometry_estimator_node.py  pointcloud_utils.py  transform_utils.py  verification.py
rwa2_starter/slam_interfaces/: CMakeLists.txt  package.xml
rwa2_starter/slam_interfaces/msg/: Keyframe.msg
yolo_detector/: package.xml  requirements.txt  setup.py
yolo_detector/config/: demo.json  demo.rviz  yolo_params.yaml  yolo_params_sensitive.yaml
yolo_detector/launch/: yolo_detector.launch.py
yolo_detector/yolo_detector/: yolo_detector_node.py
(+1 files in other folders)
